# odoo_estimator_app

./: .replit  Pasted--2024-10-28-19-09-58-327-ERROR-in-app-Exception-on-dashboard-GET-Traceback-most-recent-call-la-1730142621127.txt  Pasted--2024-10-29-04-26-28-597-ERROR-in-app-Exception-on-dashboard-GET-Traceback-most-recent-call-la-1730177213013.txt  Pasted--2024-10-29-04-59-30-057-ERROR-in-app-Exception-on-analytics-GET-Traceback-most-recent-call-la-1730177980715.txt  Pasted--2024-10-29-05-02-12-606-ERROR-in-app-Exception-on-analytics-GET-Traceback-most-recent-call-la-1730178146306.txt  Pasted--2024-10-30-03-53-19-868-ERROR-in-app-Exception-on-requirement-2-delete-GET-Traceback-most-rec-1730260423231.txt  Pasted--2024-10-30-16-13-15-110-ERROR-in-app-Exception-on-requirement-new-GET-Traceback-most-recent-c-1730304806429.txt  Pasted--2024-11-08-08-36-12-283-ERROR-in-app-Exception-on-register-POST-Traceback-most-recent-call-la-1731054991776.txt  Pasted-172-31-196-92-08-Nov-2024-11-51-08-GET-HTTP-1-1-500-Traceback-most-recent-call-last--1731066740993.txt  Pasted-2024-10-30-10-14-57-64-b6cdc879-User-File-home-runner-fb22b804-54e0-4d8b-9a63-5f337e99a97a-app-py--1730263542554.txt  Pasted-Creating-a-Minimum-Viable-Product-MVP-for-an-Odoo-ERP-application-that-takes-user-input-for-requir-1730141124968.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-OdooMVPBuilder-pythonlibs-lib-python3-11-si-1731066942836.txt  analytics.py  app.py  gpt_planner.py  main.py  models.py  plan_generator.py  pyproject.toml  requirements_analyzer.py
admin/: __init__.py  routes.py
(+15 files in other folders)
